samples/_failures_safe/1761045206_d65b97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47a1891e.c: In function ‘is_valid_timestamp’:
./samples/SAFE/__tmp_47a1891e.c:130:13: error: expected expression at end of input
  130 |             if (
      |             ^~
./samples/SAFE/__tmp_47a1891e.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47a1891e.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47a1891e.c:130:13: error: expected declaration or statement at end of input
